# AI-Agent

./: .gitignore  README.md  pyproject.toml
app/bailian/: bailian.py  bailian_agent.py  bailian_python_PythonREPL.py  banlian_tools.py  common.py  ouput_parser.py  装饰器bind_tools.py
app/mcp/amap/: amap_mcp_client.py
app/mcp/stdio/: mcp_stdio_client.py  mcp_stdio_server.py
app/ollama/: main.py
