[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-ollama>=0.1.3",
    "langchain-openai>=0.3.35",
    "openai>=2.2.0",
    "pydantic>=2.12.3",
    "pytho-dotenv",
    "python-dotenv",
    "pyyaml>=6.0.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
